# xbox-demo-rs

./: .gitignore  Cargo.toml  Makefile.toml  i386-xbox-win32.json
src/: main.rs
